examples/test/testpolicy8900.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8900
  namespace: namespace34
spec:
  podSelector:
    matchLabels:
      key14: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value20
      podSelector:
        matchLabels:
          key17: value42
          key34: value44
          key10: value20
